Add google tracking code

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ baseurl: "/datahide/" # the subpath of your site, e.g. /blog/
 url: "http://opendsi.cc" # the base hostname & protocol for your site
 twitter_username: datascienceshef
 github_username:  sods
+analytics:
+  google:
+    tracking_id: UA-62964644-1
 
 # Build settings
 markdown: kramdown
